# haskell-starter-kit

./: .dockerignore  .env  .env.template  .gitignore  ChangeLog.md  Dockerfile  Dockerfile.deps  Makefile  README.md  default.nix  docker-compose.yaml  haskell-starter-kit.cabal  haskell-starter-kit.nix  hie.yaml  liquibase.properties  local.env  package.yaml  shell.nix  stack.yaml
.github/workflows/: main.yml
app/: Main.hs
config/: default.conf  dev.conf  dev.dhall  prod.conf  template.conf  test.conf
keys/: .git-keep
migrations/: changelog.xml  liquibase.properties  liquibase.template.properties  run.bash  run.sh  user.xml
nix/: nixpkgs.json
scripts/: format-code
src/: Config.hs  Lib.hs
src/AppName/: API.hs  AppHandle.hs  Auth.hs  Config.hs  Server.hs
src/AppName/API/: PhoneVerification.hs  User.hs
src/AppName/Auth/: Combinators.hs  Commands.hs  Instances.hs  ServantInstances.hs  User.hs
src/AppName/Domain/: PhoneVerification.hs
src/AppName/Gateways/: CryptoRandomGen.hs  Database.hs  PhoneVerificationStorage.hs  StatefulRandomGenerator.hs
src/AppName/Gateways/Database/: Connection.hs  Setup.hs
src/AppName/Gateways/Database/Tables/: User.hs
src/AppName/Gateways/Endpoints/: FakeLogin.hs  GetUsers.hs  PhoneVerification.hs  SaveUsers.hs
src/AppName/PhoneVerification/: API.hs  Endpoint.hs  Model.hs  Storage.hs
src/AppName/Serializers/: User.hs
src/Ext/: Logger.hs
src/Ext/Data/: Aeson.hs  Env.hs  Text.hs  Time.hs
src/Ext/HTTP/: Error.hs  Response.hs
src/Ext/Logger/: Colog.hs  Config.hs
src/Logger/: Colog.hs  Config.hs
src/Time/: Clock.hs
test/: PhoneVerification.hs  Spec.hs
